--- a/06-侦听器watch/02_侦听器的配置选项.html
+++ b/06-侦听器watch/02_侦听器的配置选项.html
@@ -43,6 +43,13 @@
                 }
             },
             watch: {
+                info: {
+                    handler: function(newValue, oldValue) {
+
+                    },
+                    immediate: true,
+                    deep: true,
+                },
                 'info.name.lastName': function(newValue, oldValue) {
                     console.log(newValue, oldValue);
                 },
