--- a/02-Vue基础_模板语法/15-v-on的基本使用.html
+++ b/02-Vue基础_模板语法/15-v-on的基本使用.html
@@ -48,6 +48,7 @@
             methods: {
                 btn1Click() {
                     console.log("按钮1发生了点击");
+                    console.log(this);
                 },
                 mouseMove() {
                     console.log("鼠标移动");
