--- a/02-Vue基础_模板语法/08-v-bind绑定class_对象语法.html
+++ b/02-Vue基础_模板语法/08-v-bind绑定class_对象语法.html
@@ -30,7 +30,7 @@
         <h1 :class="{active:isActive}">{{message}}</h1>
         <button @click="changeActive">改变</button>
         <!-- 第二种多个键值对 -->
-        <h1 :class="{active:isActive,bgc:isShow,'fontStyle'}" class="fontStyle">{{message}}</h1>
+        <h1 :class="{active:isActive,bgc:isShow}" class="fontStyle">{{message}}</h1>
 
         <button @click="changeActive">改变</button>
         <!-- 可将整个对象放置在计算属性和data属性当中 -->
