--- a/02-Vue基础_模板语法/12-v-bind绑定style_数组语法.html
+++ b/02-Vue基础_模板语法/12-v-bind绑定style_数组语法.html
@@ -19,7 +19,7 @@
     <div :class></div>
   </template>
 
-    <script src="../js/vue.js"></script>
+    <script src="../vue.global.js"></script>
     <script>
         const App = {
             template: '#my-app',
@@ -36,7 +36,6 @@
                 }
             }
         }
-
         Vue.createApp(App).mount('#app');
     </script>
 </body>
