--- a/05-计算属性/05_computed的setter和getter.html
+++ b/05-计算属性/05_computed的setter和getter.html
@@ -9,11 +9,8 @@
 </head>
 
 <body>
-    <div id="app">
-
-    </div>
+    <div id="app"> </div>
     <template id="my-template">
-        <button @click="butClic">点击</button>
       <h2>{{oneToTen}}</h2>    
     </template>
     <script src="../vue.global.js"></script>
@@ -26,17 +23,9 @@
                 }
             },
             computed: {
-                // oneToTen() {
-                //     var result = 0;
-                //     for (let i = 0; i <= 10; i++) {
-                //         result += i;
-                //     };
-                //     console.log(result);
-                //     return result;
-                // }
                 oneToTen: {
-                    set: function() {
-                        console.log(1111);
+                    set: function(newValue) {
+                        console.log(newValue);
                     },
                     get: function() {
                         var result = 0;
@@ -45,11 +34,6 @@
                         };
                         return result;
                     }
-                }
-            },
-            methods: {
-                butClic() {
-                    this.oneToTen = 100;
                 }
             }
         }).mount('#app')
