--- a/02-Vue基础_模板语法/09-v-bind绑定class_数组语法.html
+++ b/02-Vue基础_模板语法/09-v-bind绑定class_数组语法.html
@@ -18,7 +18,7 @@
     <div :class="['abc', title, {active: isActive}]">哈哈哈哈</div>
   </template>
 
-    <script src="../js/vue.js"></script>
+    <script src="../vue.global.js"></script>
     <script>
         const App = {
             template: '#my-app',
