--- a/04-列表渲染/01_v-for的基本使用.html
+++ b/04-列表渲染/01_v-for的基本使用.html
@@ -10,16 +10,17 @@
 
 <body>
     <div id="app">
-
     </div>
     <template id="my-template">
+        <!-- 遍历数组 -->
       <ul>
-          <li v-for="(item,index) in movies">电源名：{{item}}，下标：{{index}}</li>
+          <li v-for="(item,index) in movies"  :key="item">电影名：{{item}}，下标：{{index}}</li>
       </ul> 
+      <!-- 遍历对象 -->
       <ul>
-          <li v-for="(value,key,index) in info">值：{{value}},key:{{key}},下标：{{index}}</li>
+          <li v-for="(value,key,index) in info">值：{{value}}  ,  key:{{key}}  ,下标：  {{index}}</li>
       </ul> 
-      <h4 v-for="num in 10">{{num}}</h4>
+      <span v-for="num in 10">{{num}}****</span>
     </template>
     <script src="../vue.global.js"></script>
     <script>
@@ -28,14 +29,12 @@
             data() {
                 return {
                     movies: [
-                        "星际穿越",
                         "盗梦空间",
-                        "大话西游",
-                        "教父",
-                        "少年派"
+                        "龙猫",
+                        "肖申克的救赎"
                     ],
                     info: {
-                        name: 'fuzhibin',
+                        name: 'fzb',
                         height: 188,
                         age: 20
                     }
