--- a/05-计算属性/02_三个案例实现-methods.html
+++ b/05-计算属性/02_三个案例实现-methods.html
@@ -13,9 +13,11 @@
 
     </div>
     <template id="my-template">
+        <!-- 胡子语法实现 -->
         <h2>{{firstName + ' ' + lastName}}</h2>  
         <h2>{{score>=60?"及格":'不及格'}}</h2>  
-        <h2>{{message.split(' ').reverse().join(" ")}}</h2> 
+        <h2>{{message.split(' ').reverse().join(" ")}}</h2>
+        <!-- methods 实现 -->
         <h2>{{getFullName()}}</h2>  
         <h2>{{getSection()}}</h2>  
         <h2>{{getMessageReverse()}}</h2>   
