--- a/05-计算属性/03-三个案例实现-computed.html
+++ b/05-计算属性/03-三个案例实现-computed.html
@@ -13,18 +13,14 @@
 
     </div>
     <template id="my-template">
+        <!-- 胡子语法实现 -->
         <h2>{{firstName + ' ' + lastName}}</h2>  
         <h2>{{score>=60?"及格":'不及格'}}</h2>  
         <h2>{{message.split(' ').reverse().join(" ")}}</h2> 
+        <!-- computed 实现 -->
         <h2>{{getFullName}}</h2>  
         <h2>{{getSection}}</h2>  
         <h2>{{getMessageReverse}}</h2>   
-        <h2>{{getFullName}}</h2>  
-        <h2>{{getSection}}</h2>  
-        <h2>{{getMessageReverse}}</h2>
-        <h2>{{getFullName}}</h2>  
-        <h2>{{getSection}}</h2>  
-        <h2>{{getMessageReverse}}</h2>
     </template>
     <script src="../vue.global.js"></script>
     <script>
